--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Les Pétit Plats</title>
+    <title>Les Pétit Plats </title>
     </head>
         <body>
             <header>
                 <!--main search bar-->
                 <img src="./JSON_recipes/headerimg.jpg">
-                <h1>Les Petit Plats</h1>
+<div class="header-title">
+  <h1>LES PETITS PLATS</h1>
+  <span class="circle-icon">
+    <i class="fa-regular fa-circle outer"></i>
+    <i class="fa-solid fa-circle inner"></i>
+  </span>
+</div>
                 <p>CHERCHES PARMI PLUS DE 1500 RECETTES<br>DE QUOTIDIEN,SIMPLES ET DELICIEUSES</p>
 <div class="searchbar">
   <input type="text" id="main-search" placeholder="Recherche une recette..." aria-label="Main Search Bar">
@@ -27,6 +33,9 @@
 </div>
             </header>
             <section id="filters">
+                            <div id="top-bar">
+  <div id="recipe-count">0 recettes</div>
+</div>
                 <!--tags filter section-->
   <!-- INGREDIENTS -->
 <!-- INGREDIENT FILTER -->
